Fixed nowrap

--- a/src/Components/Comments/Comments.css
+++ b/src/Components/Comments/Comments.css
@@ -34,6 +34,8 @@
 
 .comment-text {
   font-size: 18px;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 .comment-section-container {
